.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/henri/.xmonad/build-x86_64-linux -o /home/henri/.xmonad/xmonad-x86_64-linux

xmonad.hs:16:1: error:
    Could not load module ‘Data.Default’
    It is a member of the package ‘data-default-0.7.1.1-BkZarJ3J3008hHF2JOuYeW’
    which is unusable due to missing dependencies:
      data-default-class-0.1.2.0-IxhEAzgy8931aXcEiJcyZO data-default-instances-containers-0.0.1-KkbxXCPFqAc1QY7o82g83q data-default-instances-dlist-0.0.1-2RhwMGuXcTDeGT3o1mOZH data-default-instances-old-locale-0.0.1-7a4CkS2katt3I0viLKSen9
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
16 | import Data.Default
   | ^^^^^^^^^^^^^^^^^^^

xmonad.hs:18:1: error:
    Could not load module ‘XMonad.StackSet’
    It is a member of the package ‘xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL data-default-class-0.1.2.0-IxhEAzgy8931aXcEiJcyZO setlocale-1.0.0.10-74RvlEaOUOOC5hdLE0ThDH
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
18 | import qualified XMonad.StackSet as W
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:25:1: error:
    Could not find module ‘Graphics.X11.Xlib’
    Perhaps you meant Graphics.X11.Xft
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
25 | import Graphics.X11.Xlib
   | ^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:26:1: error:
    Could not find module ‘Graphics.X11.Xlib.Extras’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
26 | import Graphics.X11.Xlib.Extras
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:29:1: error:
    Could not load module ‘XMonad’
    It is a member of the package ‘xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL data-default-class-0.1.2.0-IxhEAzgy8931aXcEiJcyZO setlocale-1.0.0.10-74RvlEaOUOOC5hdLE0ThDH
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
29 | import XMonad
   | ^^^^^^^^^^^^^

xmonad.hs:30:1: error:
    Could not load module ‘XMonad.Hooks.DynamicLog’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
30 | import XMonad.Hooks.DynamicLog (PP (..), dynamicLogWithPP, shorten, wrap, xmobarColor, xmobarPP)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:31:1: error:
    Could not load module ‘XMonad.Hooks.EwmhDesktops’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
31 | import XMonad.Hooks.EwmhDesktops
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:32:1: error:
    Could not load module ‘XMonad.Hooks.ManageDocks’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
32 | import XMonad.Hooks.ManageDocks
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:33:1: error:
    Could not load module ‘XMonad.Hooks.ManageHelpers’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
33 | import XMonad.Hooks.ManageHelpers
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:37:1: error:
    Could not load module ‘XMonad.Layout.Fullscreen’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
37 | import XMonad.Layout.Fullscreen
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:38:1: error:
    Could not load module ‘XMonad.Layout.Spacing’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
38 | import XMonad.Layout.Spacing
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:39:1: error:
    Could not load module ‘XMonad.Layout.Spiral’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
39 | import XMonad.Layout.Spiral
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:40:1: error:
    Could not load module ‘XMonad.Layout.Gaps’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
40 | import XMonad.Layout.Gaps
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:41:1: error:
    Could not load module ‘XMonad.Layout.ThreeColumns’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
41 | import XMonad.Layout.ThreeColumns
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:42:1: error:
    Could not load module ‘XMonad.Layout.NoBorders’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
42 | import XMonad.Layout.NoBorders
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:44:1: error:
    Could not load module ‘XMonad.Actions.SpawnOn’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
44 | import XMonad.Actions.SpawnOn
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:46:1: error:
    Could not load module ‘XMonad.Util.NamedWindows’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
46 | import XMonad.Util.NamedWindows (getName)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:47:1: error:
    Could not load module ‘XMonad.Util.Run’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
47 | import XMonad.Util.Run
   | ^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:48:1: error:
    Could not load module ‘XMonad.Util.SpawnOnce’
    It is a member of the package ‘xmonad-contrib-0.17.1-Kah3oaoLMwjHKMGULqAZvP’
    which is unusable due to missing dependencies:
      X11-1.10.3-7zBAfsIL85sJKAyVO3fFRL X11-xft-0.3.4-HIkAuJDyZeuGzIOhjI0zX7 xmonad-0.17.1-AYliKoHPJrfEE2a09z7Nv
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
48 | import XMonad.Util.SpawnOnce
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:50:1: error:
    Could not find module ‘Graphics.X11.ExtraTypes.XF86’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
50 | import Graphics.X11.ExtraTypes.XF86
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
